# imx6ull-openwrt

./: .gitlab-ci.yml  .gitmodules  Dockerfile  README.details.md  README.ffmpeg.md  README.lorawan-details.md  README.lorawan.md  README.md  README.sip.md  README.uboot.md  README_audio.md  compile.sh  docker-compose.yml  docker_compile_all.sh  feeds.conf.default  openwrtbuildenv  version
Documentation/: README.amazon-voice-service.md  README.audio.md  README.ffmpeg.md  README.lorawan-details.md  README.lorawan.md  README.sip.md  README.uboot.md  README.wifi-sta-dualsetup-luci.md  README.wifi-sta-dualsetup-uci.md  README.wifi-sta-dualsetup.md
_production/jtag-fuse-flasher/: Readme.md  Readme.txt
_production/jtag-fuse-flasher/src/: CMakeLists.txt  QTelnet.cpp  main.cpp
_utilities/: production_script.txt  sip_server.txt  udp2can_server.py
config/: Config-kernel.in
docker/: Dockerfile
include/: package.mk
openwrt-configs/: amazon_voice_service.config  amazon_voice_service_3g.config  amazon_voice_service_wifi.config  audio_stream_3g.config  audio_stream_ethernet.config  audio_stream_wifi.config  flexcan_3g.config  flexcan_ethernet.config  flexcan_ethernet_debug.config  flexcan_wifi.config  gw-imx6ull  gw-imx6ull.config  lorawan_3g.config  lorawan_gateway_3g.config  lorawan_gateway_ethernet.config  lorawan_gateway_wifi.config  stream-imx6ull  stream-imx6ull.config  stream-wifi-imx6ull  stream-wifi-imx6ull.config  tensorflow_wifi.config  tensorflow_wifi_dev.config  video_stream_3g.config  video_stream_ethernet.config  video_stream_wifi.config
(+173 files in other folders)
